--- a/index.html
+++ b/index.html
@@ -12,39 +12,39 @@
         <input type="text" name="result" class="result" id="result" value="" placeholder="Result" readonly />
       </div>
       <div class="row">
-        <input type="button" value="&#40;" class="upScreen" id="ob" />
-        <input type="button" value="&#41;" class="upScreen" id="cb" />
-        <input type="button" value="^" class="upScreen" id="one" />
-        <input type="button" value="C" class="clr" id="clear" style="background-color:crimson" />
-        <input type="button" value="&#8592;" class="backspace" style="background-color: #d48b1e"/>
+        <input type="button" value="&#40;" data-type="upScreen" id="ob" />
+        <input type="button" value="&#41;" data-type="upScreen" id="cb" />
+        <input type="button" value="^" data-type="upScreen" id="one" />
+        <input type="button" value="C" data-type="clr" id="clear" style="background-color:crimson" />
+        <input type="button" value="&#8592;" data-type="backspace" style="background-color: #d48b1e"/>
       </div>
       <div class="row">
-        <input type="button" value="1" class="upScreen" id="one" />
-        <input type="button" value="2" class="upScreen" id="two" />
-        <input type="button" value="3" id="three" class="upScreen" />
-        <input type="button" value="+" class="upScreen" />
-        <input type="button" value="sin" class="trig" />
+        <input type="button" value="1" data-type="upScreen" id="one" />
+        <input type="button" value="2" data-type="upScreen" id="two" />
+        <input type="button" value="3" id="three" data-type="upScreen" />
+        <input type="button" value="+" data-type="upScreen" />
+        <input type="button" value="sin" data-type="trig" />
       </div>
       <div class="row">
-        <input type="button" value="4" id="four" class="upScreen" />
-        <input type="button" value="5" id="five" class="upScreen" />
-        <input type="button" value="6" id="six" class="upScreen" />
-        <input type="button" value="-" class="upScreen" />
-        <input type="button" value="cos" class="trig" />
+        <input type="button" value="4" id="four" data-type="upScreen" />
+        <input type="button" value="5" id="five" data-type="upScreen" />
+        <input type="button" value="6" id="six" data-type="upScreen" />
+        <input type="button" value="-" data-type="upScreen" />
+        <input type="button" value="cos" data-type="trig" />
       </div>
       <div class="row">
-        <input type="button" value="7" id="seven" class="upScreen" />
-        <input type="button" value="8" id="eight" class="upScreen" />
-        <input type="button" value="9" id="nine" class="upScreen" />
-        <input type="button" value="x" class="upScreen" />
-        <input type="button" value="tan" class="trig" />
+        <input type="button" value="7" id="seven" data-type="upScreen" />
+        <input type="button" value="8" id="eight" data-type="upScreen" />
+        <input type="button" value="9" id="nine" data-type="upScreen" />
+        <input type="button" value="*" data-type="upScreen" />
+        <input type="button" value="tan" data-type="trig" />
       </div>
       <div class="row">
-        <input type="button" value="." class="dot" class="upScreen" />
-          <input type="button" value="0" id="zero" class="upScreen" />
-        <input type="button" value="=" onclick="evalRes()" />
-          <input type="button" value="/" class="upScreen" />
-        <input type="button" value="ANS" onclick="getAns()" />
+        <input type="button" value="." id="dot" data-type="upScreen" />
+        <input type="button" value="0" id="zero" data-type="upScreen" />
+        <input type="button" value="=" data-type="evalRes" />
+        <input type="button" value="/" data-type="upScreen" />
+        <input type="button" value="ANS" data-type="getAns" />
       </div>
     </div>
     <script src="script.js">
