--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <input type="button" value="&#40;" data-type="upScreen" id="ob" />
         <input type="button" value="&#41;" data-type="upScreen" id="cb" />
         <input type="button" value="^" data-type="upScreen" id="one" />
+        <input type="button" value="sqrt" data-type="sqrt" />
         <input type="button" value="C" data-type="clr" id="clear" style="background-color:crimson" />
         <input type="button" value="&#8592;" data-type="backspace" style="background-color: #d48b1e"/>
       </div>
@@ -24,6 +25,7 @@
         <input type="button" value="3" id="three" data-type="upScreen" />
         <input type="button" value="+" data-type="upScreen" />
         <input type="button" value="sin" data-type="trig" />
+        <input type="button" value="X!" data-type="fact" />
       </div>
       <div class="row">
         <input type="button" value="4" id="four" data-type="upScreen" />
@@ -31,6 +33,7 @@
         <input type="button" value="6" id="six" data-type="upScreen" />
         <input type="button" value="-" data-type="upScreen" />
         <input type="button" value="cos" data-type="trig" />
+        <input type="button" value="log" data-type="log" />
       </div>
       <div class="row">
         <input type="button" value="7" id="seven" data-type="upScreen" />
@@ -38,6 +41,7 @@
         <input type="button" value="9" id="nine" data-type="upScreen" />
         <input type="button" value="*" data-type="upScreen" />
         <input type="button" value="tan" data-type="trig" />
+        <input type="button" value="ln" data-type="ln" />
       </div>
       <div class="row">
         <input type="button" value="." id="dot" data-type="upScreen" />
@@ -45,6 +49,7 @@
         <input type="button" value="=" data-type="evalRes" />
         <input type="button" value="/" data-type="upScreen" />
         <input type="button" value="ANS" data-type="getAns" />
+        <input type="button" value="pi" data-type="pi" />
       </div>
     </div>
     <script src="script.js">
